--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -42,14 +42,16 @@ jobs:
               MODE: ${{ MODE }}
               ${{ insert }}: ${{ parameters[OS_NAME] }}
               ${{ insert }}: ${{ parameters.universal }}
-          
+      
       - template: wats_diff.yml
         parameters:
           # For Windows, since there is no Make-based reference, compare against Linux.
           ${{ if eq(OS_NAME, 'Windows') }}:
-            OS_NAME_MAKE: Linux
+            OS_NAME_LEFT: Linux
           ${{ if ne(OS_NAME, 'Windows') }}:
-            OS_NAME_MAKE: ${{ OS_NAME }}
-          OS_NAME_CMAKE: ${{ OS_NAME }}
+            OS_NAME_LEFT: ${{ OS_NAME }}
+          OS_NAME_RIGHT: ${{ OS_NAME }}
+          BUILD_SYSTEM_LEFT: Make
+          BUILD_SYSTEM_RIGHT: CMake
           BUILD_TYPE: ${{ BUILD_TYPE }}
           MODE: ${{ MODE }}
