add make/make comparison

--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -43,6 +43,7 @@ jobs:
               ${{ insert }}: ${{ parameters[OS_NAME] }}
               ${{ insert }}: ${{ parameters.universal }}
       
+      # Make vs CMake comparison
       - template: wats_diff.yml
         parameters:
           # For Windows, since there is no Make-based reference, compare against Linux.
@@ -55,3 +56,15 @@ jobs:
           BUILD_SYSTEM_RIGHT: CMake
           BUILD_TYPE: ${{ BUILD_TYPE }}
           MODE: ${{ MODE }}
+
+# Make vs Make comparison
+- ${{ each BUILD_TYPE in parameters.BUILD_TYPES }}:
+  - ${{ each MODE in parameters.MODES }}:
+    - template: wats_diff.yml
+      parameters:
+        OS_NAME_LEFT: Linux
+        OS_NAME_RIGHT: macOS
+        BUILD_SYSTEM_LEFT: Make
+        BUILD_SYSTEM_RIGHT: Make
+        BUILD_TYPE: ${{ BUILD_TYPE }}
+        MODE: ${{ MODE }}
