--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -24,7 +24,7 @@ parameters:
   OS_NAMES: [Windows, Linux, macOS]
   BUILD_SYSTEMS: [Make, CMake]
   BUILD_TYPES: [Debug, Release]
-  MODES: [serial, smpar, dmpar, dm+sm]
+  MODES: [serial, smpar, dmpar, dm_sm]
 
 jobs:
 - ${{ each OS_NAME in parameters.OS_NAMES }}:
