--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ jobs:
         - FC=gfortran
         - GRIB1=1
         - GRIB2=0
-        - MODE=dm+sm
+        - MODE=dm_sm
         - NESTING=basic
 
     - stage: build
