--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -4,5 +4,5 @@ trigger:
 jobs:
 - template: .ci/azure-pipelines/matrix.yml
   parameters:
-    BUILD_TYPES: [Debug]
-    MODES: [dm_sm]
+    BUILD_TYPES: [Debug, Release]
+    MODES: [serial, smpar, dmpar, dm_sm]
