--- a/.ci/azure-pipelines/windows.yml
+++ b/.ci/azure-pipelines/windows.yml
@@ -5,7 +5,7 @@ jobs:
   timeoutInMinutes: 0
 
   pool:
-      vmImage: vs2017-win2016
+      vmImage: windows-2019
 
   variables:
     ${{ each pair in parameters }}:
