--- a/.ci/azure-pipelines/wats_diff.yml
+++ b/.ci/azure-pipelines/wats_diff.yml
@@ -35,13 +35,12 @@ jobs:
       find . -type f
     displayName: List WATS output files
   
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.x'
+  - bash: bash .ci/unix/use-conda.sh
+    displayName: Enable Conda
   
   - script: |
       git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
-      pip install -r wats/requirements.txt
+      conda env update -f wats/environment.yml
     displayName: Install WATS
   
   - script: |
