--- a/.ci/azure-pipelines/wats_diff.yml
+++ b/.ci/azure-pipelines/wats_diff.yml
@@ -40,7 +40,7 @@ jobs:
   
   - script: |
       git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
-      conda env update -f wats/environment.yml
+      conda env update -n base -f wats/environment.yml
     displayName: Install WATS
   
   - script: |
