--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,4 +5,6 @@ jobs:
 - template: .ci/azure-pipelines/matrix.yml
   parameters:
     BUILD_TYPES: [Debug]
-    MODES: [dm_sm]
+    #MODES: [dm_sm]
+    MODES: [serial]
+    WATS_PLOTS: true # TODO disable
