--- a/.ci/azure-pipelines/wats_diff.yml
+++ b/.ci/azure-pipelines/wats_diff.yml
@@ -9,10 +9,6 @@ jobs:
   - ${{ parameters.OS_NAME_LEFT }}_${{ parameters.BUILD_SYSTEM_LEFT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
   - ${{ parameters.OS_NAME_RIGHT }}_${{ parameters.BUILD_SYSTEM_RIGHT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
   
-  variables:
-    ${{ each pair in parameters }}:
-      ${{ pair.key }}: ${{ pair.value }}
-
   steps:
   - task: DownloadBuildArtifacts@0
     displayName: Retrieve ${{ parameters.OS_NAME_LEFT }} ${{ parameters.BUILD_SYSTEM_LEFT }} WATS outputs
@@ -37,14 +33,14 @@ jobs:
     displayName: Enable Conda
   
   - script: |
-      git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
+      git clone --depth=1 --branch=${{ parameters.WATS_BRANCH }} https://github.com/${{ parameters.WATS_REPO }}.git wats
       conda env update -n base -f wats/environment.yml
     displayName: Install WATS
   
   - script: |
       set -ex
       O=wats_outputs
-      W="python wats/wats/main.py diff --mode $WATS_MODE"
+      W="python wats/wats/main.py diff --mode ${{ parameters.WATS_MODE }}"
       $W $O/wats_${{ parameters.OS_NAME_LEFT }}_${{ parameters.BUILD_SYSTEM_LEFT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }} $O/wats_${{ parameters.OS_NAME_RIGHT }}_${{ parameters.BUILD_SYSTEM_RIGHT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
     displayName: Run WATS diff
       
