--- a/.ci/azure-pipelines/windows.yml
+++ b/.ci/azure-pipelines/windows.yml
@@ -8,24 +8,9 @@ jobs:
       vmImage: windows-2019 # vs2017-win2016
 
   variables:
-    ${{ each pair in parameters }}:
-      ${{ pair.key }}: ${{ pair.value }}
+    ${{ insert }}: ${{ parameters }}
 
   steps:
-  - bash: bash .ci/unix/use-conda.sh
-    displayName: Enable Conda
-
-  - pwsh: |
-      git clone --depth=1 --branch=$Env:WATS_BRANCH https://github.com/$Env:WATS_REPO.git wats
-      conda env update -n base -f wats/environment.yml
-    displayName: Install WATS
-
-  - script: set
-  - script: pip freeze
-  - script: python --version
-  - script: python -c "import sys; print(sys.path)"
-      
-
   - pwsh: .ci\windows\dump-vm-specs.ps1
     displayName: Dump VM specs
 
