--- a/.ci/azure-pipelines/wats_diff.yml
+++ b/.ci/azure-pipelines/wats_diff.yml
@@ -9,7 +9,18 @@ jobs:
   - ${{ parameters.OS_NAME_LEFT }}_${{ parameters.BUILD_SYSTEM_LEFT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
   - ${{ parameters.OS_NAME_RIGHT }}_${{ parameters.BUILD_SYSTEM_RIGHT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
   
+  variables:
+    ${{ insert }}: ${{ parameters }}
+
   steps:
+  - bash: bash .ci/unix/use-conda.sh
+    displayName: Enable Conda
+  
+  - pwsh: |
+      git clone --depth=1 --branch=$Env:WATS_BRANCH https://github.com/$Env:WATS_REPO.git wats
+      conda env update -n base -f wats/environment.yml
+    displayName: Install WATS
+
   - task: DownloadBuildArtifacts@0
     displayName: Retrieve ${{ parameters.OS_NAME_LEFT }} ${{ parameters.BUILD_SYSTEM_LEFT }} WATS outputs
     inputs:
@@ -28,14 +39,6 @@ jobs:
       cd wats_outputs
       find . -type f
     displayName: List WATS output files
-  
-  - bash: bash .ci/unix/use-conda.sh
-    displayName: Enable Conda
-  
-  - script: |
-      git clone --depth=1 --branch=${{ parameters.WATS_BRANCH }} https://github.com/${{ parameters.WATS_REPO }}.git wats
-      conda env update -n base -f wats/environment.yml
-    displayName: Install WATS
   
   - script: |
       set -ex
