simplify... or not

--- a/.ci/azure-pipelines/wats_run.yml
+++ b/.ci/azure-pipelines/wats_run.yml
@@ -2,8 +2,9 @@ steps:
 - bash: bash .ci/unix/use-conda.sh
   displayName: Enable Conda
 
-- pwsh: |
-    git clone --depth=1 --branch=$Env:WATS_BRANCH https://github.com/$Env:WATS_REPO.git wats
+- bash: |
+    set -ex
+    git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
     conda env update -n base -f wats/environment.yml
   displayName: Install WATS
 
