--- a/.ci/azure-pipelines/wats_diff.yml
+++ b/.ci/azure-pipelines/wats_diff.yml
@@ -16,8 +16,9 @@ jobs:
   - bash: bash .ci/unix/use-conda.sh
     displayName: Enable Conda
   
-  - pwsh: |
-      git clone --depth=1 --branch=$Env:WATS_BRANCH https://github.com/$Env:WATS_REPO.git wats
+  - bash: |
+      set -ex
+      git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
       conda env update -n base -f wats/environment.yml
     displayName: Install WATS
 
@@ -43,7 +44,7 @@ jobs:
   - script: |
       set -ex
       O=wats_outputs
-      W="python wats/wats/main.py diff --mode ${{ parameters.WATS_MODE }}"
-      $W $O/wats_${{ parameters.OS_NAME_LEFT }}_${{ parameters.BUILD_SYSTEM_LEFT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }} $O/wats_${{ parameters.OS_NAME_RIGHT }}_${{ parameters.BUILD_SYSTEM_RIGHT }}_${{ parameters.BUILD_TYPE }}_${{ parameters.MODE }}
+      W="python wats/wats/main.py diff --mode $WATS_MODE"
+      $W $O/wats_${OS_NAME_LEFT}_${BUILD_SYSTEM_LEFT}_${BUILD_TYPE}_${MODE} $O/wats_${OS_NAME_RIGHT}_${BUILD_SYSTEM_RIGHT }}_${BUILD_TYPE}_${MODE}
     displayName: Run WATS diff
       
