--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -48,32 +48,34 @@ jobs:
               ${{ insert }}: ${{ parameters.common }}
       
       # Make vs CMake comparison
+      - ${{ if parameters.WATS_DIFF }}:
+        - template: wats_diff.yml
+          parameters:
+            # For Windows, since there is no Make-based reference, compare against Linux.
+            ${{ if eq(OS_NAME, 'Windows') }}:
+              OS_NAME_LEFT: Linux
+            ${{ if ne(OS_NAME, 'Windows') }}:
+              OS_NAME_LEFT: ${{ OS_NAME }}
+            OS_NAME_RIGHT: ${{ OS_NAME }}
+            BUILD_SYSTEM_LEFT: Make
+            BUILD_SYSTEM_RIGHT: CMake
+            BUILD_TYPE: ${{ BUILD_TYPE }}
+            MODE: ${{ MODE }}
+            ${{ insert }}: ${{ parameters.common }}
+
+# Make vs Make comparison
+- ${{ if parameters.WATS_DIFF }}:
+  - ${{ each BUILD_TYPE in parameters.BUILD_TYPES }}:
+    - ${{ each MODE in parameters.MODES }}:
       - template: wats_diff.yml
         parameters:
-          # For Windows, since there is no Make-based reference, compare against Linux.
-          ${{ if eq(OS_NAME, 'Windows') }}:
-            OS_NAME_LEFT: Linux
-          ${{ if ne(OS_NAME, 'Windows') }}:
-            OS_NAME_LEFT: ${{ OS_NAME }}
-          OS_NAME_RIGHT: ${{ OS_NAME }}
+          OS_NAME_LEFT: Linux
+          OS_NAME_RIGHT: macOS
           BUILD_SYSTEM_LEFT: Make
-          BUILD_SYSTEM_RIGHT: CMake
+          BUILD_SYSTEM_RIGHT: Make
           BUILD_TYPE: ${{ BUILD_TYPE }}
           MODE: ${{ MODE }}
           ${{ insert }}: ${{ parameters.common }}
-
-# Make vs Make comparison
-- ${{ each BUILD_TYPE in parameters.BUILD_TYPES }}:
-  - ${{ each MODE in parameters.MODES }}:
-    - template: wats_diff.yml
-      parameters:
-        OS_NAME_LEFT: Linux
-        OS_NAME_RIGHT: macOS
-        BUILD_SYSTEM_LEFT: Make
-        BUILD_SYSTEM_RIGHT: Make
-        BUILD_TYPE: ${{ BUILD_TYPE }}
-        MODE: ${{ MODE }}
-        ${{ insert }}: ${{ parameters.common }}
 
 - ${{ if parameters.WATS_PLOTS }}:
   - template: wats_plots.yml
