--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -7,5 +7,5 @@ jobs:
   parameters:
     BUILD_TYPES: [Debug, Release]
     MODES: [serial, smpar, dmpar, dm_sm]
-    WATS_DIFF: true
+    WATS_DIFF: false
     WATS_PLOTS: true
