--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -5,8 +5,8 @@ parameters:
     Windows: windows.yml
   
   Linux:
-    CC: gcc
-    FC: gfortran
+    CC: gcc-8
+    FC: gfortran-8
   macOS:
     CC: gcc-8
     FC: gfortran-8
