--- a/.ci/azure-pipelines/wats_plots.yml
+++ b/.ci/azure-pipelines/wats_plots.yml
@@ -1,5 +1,6 @@
 parameters:
   DOMAINS: [d01, d02]
+  TIMES: [0, 3, 6]
 
 jobs:
 - job: wats_plots
@@ -60,10 +61,18 @@ jobs:
               - script: |
                   set -ex
                   O=wats_outputs
-                  W="python wats/wats/plots.py compute --stats-dir wats_stats_single_ref/${{ DOMAIN }} --filter ${{ DOMAIN }} --append"
+                  W="python wats/wats/plots.py compute --stats-dir wats_stats/${{ DOMAIN }}/TALL --filter ${{ DOMAIN }} --append"
                   $W $O/wats_Linux_Make_Debug_serial $O/wats_${{ OS_NAME }}_${{ BUILD_SYSTEM }}_${{ BUILD_TYPE }}_${{ MODE }}
                 displayName: 'Run WATS: compute plot stats Linux/Make/Debug/serial vs ${{ OS_NAME }}/${{ BUILD_SYSTEM }}/${{ BUILD_TYPE }}/${{ MODE }} for domain ${{ DOMAIN }}'
-
+              
+              - ${{ each TIME in parameters.TIMES }}:
+                - script: |
+                    set -ex
+                    O=wats_outputs
+                    W="python wats/wats/plots.py compute --stats-dir wats_stats/${{ DOMAIN }}/T${{ TIME }} --filter ${{ DOMAIN }} --time-idx ${{ TIME }} --append"
+                    $W $O/wats_Linux_Make_Debug_serial $O/wats_${{ OS_NAME }}_${{ BUILD_SYSTEM }}_${{ BUILD_TYPE }}_${{ MODE }}
+                  displayName: 'Run WATS: compute plot stats Linux/Make/Debug/serial vs ${{ OS_NAME }}/${{ BUILD_SYSTEM }}/${{ BUILD_TYPE }}/${{ MODE }} for domain ${{ DOMAIN }} - T${{ TIME }}'
+                
             - script: |
                 rm -rf wats_outputs/wats_${{ OS_NAME }}_${{ BUILD_SYSTEM }}_${{ BUILD_TYPE }}_${{ MODE }}
               displayName: Remove trial ${{ OS_NAME }}/${{ BUILD_SYSTEM }}/${{ BUILD_TYPE }}/${{ MODE }} WATS outputs 
@@ -73,66 +82,33 @@ jobs:
     displayName: Remove reference Linux/Make/Debug/serial WATS outputs 
 
   - task: PublishBuildArtifacts@1
-    displayName: Store WATS plot stats (single reference)
+    displayName: Store WATS plot stats
     inputs:
-      pathtoPublish: wats_stats_single_ref
-      artifactName: wats_stats_single_ref
+      pathtoPublish: wats_stats
+      artifactName: wats_stats
 
   - ${{ each DOMAIN in parameters.DOMAINS }}:
     - script: |
-        python wats/wats/plots.py plot --stats-dir wats_stats_single_ref/${{ DOMAIN }} --plots-dir wats_plots_single_ref/${{ DOMAIN }}
-      displayName: 'Run WATS: create plots (single reference) for domain ${{ DOMAIN }}'
+        python wats/wats/plots.py plot --stats-dir wats_stats/${{ DOMAIN }}/TALL --plots-dir wats_plots/${{ DOMAIN }}/TALL/OSALL
+      displayName: 'Run WATS: create plots for domain ${{ DOMAIN }}'
+    
     - ${{ each OS_NAME in parameters.OS_NAMES }}:
       - script: |
-          python wats/wats/plots.py plot --stats-dir wats_stats_single_ref/${{ DOMAIN }} --plots-dir wats_plots_single_ref/${{ DOMAIN }}/${{ OS_NAME }} --filter ${{ OS_NAME }}
-        displayName: 'Run WATS: create plots (single reference) for domain ${{ DOMAIN }} - ${{ OS_NAME }}'
+          python wats/wats/plots.py plot --stats-dir wats_stats/${{ DOMAIN }}/TALL --plots-dir wats_plots/${{ DOMAIN }}/TALL/${{ OS_NAME }} --filter ${{ OS_NAME }}
+        displayName: 'Run WATS: create plots for domain ${{ DOMAIN }} - ${{ OS_NAME }}'
+
+    - ${{ each TIME in parameters.TIMES }}:
+      - script: |
+          python wats/wats/plots.py plot --stats-dir wats_stats/${{ DOMAIN }}/T${{ TIME }} --plots-dir wats_plots/${{ DOMAIN }}/T${{ TIME }}/OSALL
+        displayName: 'Run WATS: create plots for domain ${{ DOMAIN }} - T${{ TIME }}'
+      
+      - ${{ each OS_NAME in parameters.OS_NAMES }}:
+        - script: |
+            python wats/wats/plots.py plot --stats-dir wats_stats/${{ DOMAIN }}/T${{ TIME }} --plots-dir wats_plots/${{ DOMAIN }}/T${{ TIME }}/${{ OS_NAME }} --filter ${{ OS_NAME }}
+          displayName: 'Run WATS: create plots for domain ${{ DOMAIN }} - T${{ TIME }} - ${{ OS_NAME }}'
   
   - task: PublishBuildArtifacts@1
-    displayName: Store WATS plots (single reference)
+    displayName: Store WATS plots
     inputs:
-      pathtoPublish: wats_plots_single_ref
-      artifactName: wats_plots_single_ref
-
-  # Plot: Make vs CMake for same configuration/environment
-
-  - ${{ each OS_NAME in parameters.OS_NAMES }}:
-    # For Windows, since there is no Make-based reference, skip.
-    - ${{ if not(eq(OS_NAME, 'Windows')) }}:
-      - ${{ each BUILD_TYPE in parameters.BUILD_TYPES }}:
-        - ${{ each MODE in parameters.MODES }}:
-
-          - task: DownloadBuildArtifacts@0
-            displayName: Retrieve reference and trial ${{ OS_NAME }}/{Make,CMake}/${{ BUILD_TYPE }}/${{ MODE }} WATS outputs
-            inputs:
-              downloadPath: wats_outputs
-              downloadType: specific
-              itemPattern: 'wats_${{ OS_NAME }}_*_${{ BUILD_TYPE }}_${{ MODE }}/**'
-          
-          - ${{ each DOMAIN in parameters.DOMAINS }}:
-            - script: |
-                set -ex
-                O=wats_outputs
-                W="python wats/wats/plots.py compute --stats-dir wats_stats_make_vs_cmake/${{ DOMAIN }} --filter ${{ DOMAIN }} --append"
-                $W $O/wats_${{ OS_NAME }}_Make_${{ BUILD_TYPE }}_${{ MODE }} $O/wats_${{ OS_NAME }}_CMake_${{ BUILD_TYPE }}_${{ MODE }}
-              displayName: 'Run WATS: compute plot stats ${{ OS_NAME }}/Make/${{ BUILD_TYPE }}/${{ MODE }} vs ${{ OS_NAME }}/CMake/${{ BUILD_TYPE }}/${{ MODE }} for domain ${{ DOMAIN }}'
-                    
-          - script: |
-              rm -rf wats_outputs/wats_${{ OS_NAME }}_*_${{ BUILD_TYPE }}_${{ MODE }}
-            displayName: Remove reference and trial ${{ OS_NAME }}/{Make,CMake}/${{ BUILD_TYPE }}/${{ MODE }} WATS outputs 
-
-  - task: PublishBuildArtifacts@1
-    displayName: Store WATS plot stats (Make vs CMake)
-    inputs:
-      pathtoPublish: wats_stats_make_vs_cmake
-      artifactName: wats_stats_make_vs_cmake
-
-  - ${{ each DOMAIN in parameters.DOMAINS }}:
-    - script: |
-        python wats/wats/plots.py plot --stats-dir wats_stats_make_vs_cmake/${{ DOMAIN }} --plots-dir wats_plots_make_vs_cmake/${{ DOMAIN }}
-      displayName: 'Run WATS: create plots (Make vs CMake) for domain ${{ DOMAIN }}'
-    
-  - task: PublishBuildArtifacts@1
-    displayName: Store WATS plots (Make vs CMake)
-    inputs:
-      pathtoPublish: wats_plots_make_vs_cmake
-      artifactName: wats_plots_make_vs_cmake
+      pathtoPublish: wats_plots
+      artifactName: wats_plots
