--- a/test/em_real/CMakeLists.txt
+++ b/test/em_real/CMakeLists.txt
@@ -1,11 +1,6 @@
 # Copyright 2018 M. Riechert and D. Meyer. Licensed under the MIT License.
 
 set(run_files
-    ETAMPNEW_DATA 
-    ETAMPNEW_DATA.expanded_rain 
-    RRTM_DATA 
-    RRTMG_LW_DATA 
-    RRTMG_SW_DATA 
     CAM_ABS_DATA 
     CAM_AEROPT_DATA 
     CAMtr_volume_mixing_ratio.RCP4.5 
@@ -56,6 +51,26 @@ set(run_files
 
 foreach (run_file ${run_files})
     install(FILES ${CMAKE_SOURCE_DIR}/run/${run_file} DESTINATION test/em_real)
+endforeach()
+
+set(extra_run_files
+    ETAMPNEW_DATA
+    ETAMPNEW_DATA.expanded_rain
+    RRTM_DATA 
+    RRTMG_LW_DATA 
+    RRTMG_SW_DATA
+)
+
+if (USE_REAL8)
+    set(suffix _DBL)
+else()
+    set(suffix)
+endif()
+
+foreach (run_file ${extra_run_files})
+    install(FILES ${CMAKE_SOURCE_DIR}/run/${run_file}${suffix}
+            DESTINATION test/em_real
+            RENAME ${run_file})
 endforeach()
 
 install(FILES ${CMAKE_SOURCE_DIR}/run/CAMtr_volume_mixing_ratio.RCP8.5
