run full CI for all PRs

--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -1,8 +1,6 @@
-# Runs on commits to the wrf-cmake branch.
-# PR builds can be triggered by commenting "/azp run WRF (full)".
+# Runs on commits to the wrf-cmake branch and PRs.
 trigger:
 - wrf-cmake
-pr: none
 
 jobs:
 - template: .ci/azure-pipelines/matrix.yml
