--- a/.ci/azure-pipelines/unix.yml
+++ b/.ci/azure-pipelines/unix.yml
@@ -34,4 +34,5 @@ jobs:
   - script: .ci/unix/install-wrf.sh
     displayName: Install WRF
 
-  - template: wats_run.yml
+  - ${{ if eq(parameters.WATS_RUN, 'true') }}:
+    - template: wats_run.yml
