--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,8 @@
 # Runs on commits to any branch except wrf-cmake.
 trigger:
   branches:
+    include:
+    - '*'
     exclude:
     - wrf-cmake
 pr: none
