automate binary releases for macOS & Windows [skip ci]

--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -22,6 +22,8 @@ parameters:
     NESTING: basic
     GRIB1: 0
     GRIB2: 1
+
+  RELEASE: false
   
   # Loop/matrix parameters.
   # Note that these may be overridden by the including yml (typically azure-pipelines.yml).
@@ -40,6 +42,7 @@ jobs:
         - ${{ if not(and(eq(OS_NAME, 'Windows'), eq(BUILD_SYSTEM, 'Make'))) }}:
           - template: ${{ parameters.templates[OS_NAME] }}
             parameters:
+              RELEASE: ${{ parameters.RELEASE }}
               OS_NAME: ${{ OS_NAME }}
               BUILD_SYSTEM: ${{ BUILD_SYSTEM }}
               BUILD_TYPE: ${{ BUILD_TYPE }}
