--- a/.ci/azure-pipelines/release.yml
+++ b/.ci/azure-pipelines/release.yml
@@ -28,7 +28,7 @@ steps:
 - task: GithubRelease@0 
   displayName: Create GitHub Draft Release
   inputs:
-    githubConnection: WRF-CMake
+    githubConnection: WRF-CMake-releases
     repositoryName: WRF-CMake/WRF
     # TODO we really want createOrEdit here like on Appveyor or Travis CI
     #action: create
