add comment [skip ci]

--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -2,6 +2,8 @@
 # Then, run this pipeline on the tag (will not deploy if untagged)
 # to store binaries in a draft GitHub release.
 
+# Note that these values are also overridden to "none" in Azure DevOps's UI to
+# prevent others to run this pipeline by changing the triggers below and opening a PR.
 trigger: none
 pr: none
 
