remove changelog [skip ci]

--- a/.ci/azure-pipelines/release.yml
+++ b/.ci/azure-pipelines/release.yml
@@ -34,6 +34,7 @@ steps:
     tag: $(Build.SourceBranchName)
     isDraft: true
     isPreRelease: true
+    addChangeLog: false
     assetUploadMode: replace
     assets: |
       $(Build.ArtifactStagingDirectory)/*
