--- a/.ci/azure-pipelines/release.yml
+++ b/.ci/azure-pipelines/release.yml
@@ -25,6 +25,13 @@ steps:
     dir $(Build.ArtifactStagingDirectory) -r | % { if ($_.Name -cne $_.Name.ToLower()) { ren $_.FullName $_.Name.ToLower() } }
   displayName: Rename to lowercase
 
+# not strictly needed
+- task: PublishBuildArtifacts@1
+  displayName: Store distribution package
+  inputs:
+    pathtoPublish: $(Build.ArtifactStagingDirectory)
+    artifactName: dist_$(OS_NAME)_$(BUILD_SYSTEM)_$(BUILD_TYPE)_$(MODE)
+
 - task: GithubRelease@0 
   displayName: Create GitHub Draft Release
   inputs:
