--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -25,10 +25,14 @@ parameters:
   
   # Loop/matrix parameters.
   # Note that these may be overridden by the including yml (typically azure-pipelines.yml).
-  OS_NAMES: [Windows, Linux, macOS]
-  BUILD_SYSTEMS: [Make, CMake]
-  BUILD_TYPES: [Debug, Release]
-  MODES: [serial, smpar, dmpar, dm_sm]
+  #OS_NAMES: [Windows, Linux, macOS]
+  OS_NAMES: [Linux]
+  #BUILD_SYSTEMS: [Make, CMake]
+  BUILD_SYSTEMS: [CMake]
+  #BUILD_TYPES: [Debug, Release]
+  BUILD_TYPES: [Debug]
+  #MODES: [serial, smpar, dmpar, dm_sm]
+  MODES: [serial, dmpar]
 
 jobs:
 - ${{ each OS_NAME in parameters.OS_NAMES }}:
