--- a/.ci/azure-pipelines/unix.yml
+++ b/.ci/azure-pipelines/unix.yml
@@ -20,7 +20,7 @@ jobs:
   steps:
   - script: |
       /tmp/docker exec -t -u 0 ci-container \
-        sh -c "yum install sudo"
+        sh -c "yum install -y sudo"
     displayName: Set up sudo
 
   - script: .ci/unix/dump-vm-specs.sh
