--- a/.ci/azure-pipelines/matrix.yml
+++ b/.ci/azure-pipelines/matrix.yml
@@ -5,8 +5,10 @@ parameters:
     Windows: windows.yml
   
   Linux:
-    CC: gcc-8
-    FC: gfortran-8
+    #CC: gcc-8
+    CC: gcc
+    #FC: gfortran-8
+    FC: gfortran
   macOS:
     CC: gcc-8
     FC: gfortran-8
