add REAL8 to CI (for now, half of existing Travis/Appveyor jobs)

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,7 @@ environment:
       NESTING: basic
       GRIB1: 0
       GRIB2: 1
+      REAL8: 0
       
     - BUILD_TYPE: Debug
       CC: gcc
@@ -24,6 +25,7 @@ environment:
       NESTING: basic
       GRIB1: 0
       GRIB2: 1
+      REAL8: 1
 
 install:
   - ps: .ci\windows\dump-vm-specs.ps1
