--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
         - CC=gcc
         - FC=gfortran
         - MODE=serial
+        - REAL8=0
 
     - stage: build
       os: linux
@@ -28,6 +29,7 @@ jobs:
         - CC=gcc
         - FC=gfortran
         - MODE=dmpar
+        - REAL8=1
     
     - stage: build
       os: osx
@@ -39,6 +41,7 @@ jobs:
         - CC=gcc-8 # GNU via Homebrew
         - FC=gfortran-8
         - MODE=serial
+        - REAL8=1
 
     - stage: build
       os: osx
@@ -50,6 +53,7 @@ jobs:
         - CC=gcc-8 # GNU via Homebrew
         - FC=gfortran-8
         - MODE=dmpar
+        - REAL8=0
 
     # CMake builds
 
@@ -66,6 +70,7 @@ jobs:
         - GRIB2=1
         - MODE=serial
         - NESTING=basic
+        - REAL8=1
 
     - stage: build
       os: linux
@@ -80,6 +85,7 @@ jobs:
         - GRIB2=0
         - MODE=dm_sm
         - NESTING=basic
+        - REAL8=0
 
     - stage: build
       os: osx
@@ -94,6 +100,7 @@ jobs:
         - GRIB2=1
         - MODE=serial
         - NESTING=basic
+        - REAL8=0
 
     - stage: build
       os: osx
@@ -108,6 +115,7 @@ jobs:
         - GRIB2=1
         - MODE=dmpar
         - NESTING=basic
+        - REAL8=1
 
 before_install:
   - .ci/unix/dump-vm-specs.sh
